<resources>
    <string name="app_name">Baking</string>

    <string name="action_licenses">Open Source Licenses</string>
    <string name="title_item_list">Recipes</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="JSON_parseError_Text">There is error in JSON parsing</string>

    <string name="ingredient_item_detailPage">Ingredient</string>

    <string name="steps_item_detailPage">Step</string>

    <string name="placeholder">&#160;</string>

    <string name="previous_btn">Previous</string>

    <string name="next_btn">Next</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="toast_nextBtn">No next step</string>

    <string name="toast_previousBtn">No previous step</string>

    <string name="appwidget_text">Widget displays ingredients of recipe</string>

    <string name="add_widget">Add widget</string>

    <string name="SnackBar_noInternet">"Sorry! Not connected to internet"</string>

    <string name="widget_empty_textView">Click to start Baking</string>

</resources>
