<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/video_player_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

    </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

    <TextView
        android:id="@+id/tv_step_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/text_padding"
        android:layout_margin="@dimen/text_margin"
        android:gravity="center_vertical"
        android:textSize="@dimen/tv_stepDetailedDescription_fontSize"
        tools:text="3. Press the cookie crumb mixture into the prepared pie pan and bake for 12 minutes. Let crust cool to room temperature."/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_step_height">

        <Button
            android:id="@+id/btn_previous_step"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/previous_btn"
            />

        <Button
            android:id="@+id/btn_next_step"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/next_btn"/>

    </RelativeLayout>

</LinearLayout>