<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="@dimen/mainActivity_progressBar_Size"
        android:layout_height="@dimen/mainActivity_progressBar_Size"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_receipt_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/receipt_list_content">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>